--- a/.env
+++ b/.env
@@ -1,4 +1,10 @@
 HOST='localhost'
-USER='root'
 PASSWORD='master1951'
 DATABASE='master'
+PORT=8000
+DB_USER='root'
+DB_CON_LIMIT=100
+
+DEPLOY_DB_USER=upobthli_newmasterdb
+DEPLOY_PASSWORD=80jcF0Sd~H_P
+DEPLOY_DATABASE=upobthli_newmasterdb
